--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -5,7 +5,7 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Ge, A.*, <b>Arab, A</b>.*, ..., Goodarzi, H., Gilbert, L.,
+     Alex Y. Ge*, <b>Abolfazl Arab<b>*, Raymond Dai, Albertas Navickas, Lisa Fish, Kristle Garcia, Hosseinali Asgharian, Hani Goodarzi, Luke A. Gilbert
      A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.12.14.518457">
@@ -15,12 +15,21 @@
  </li>
 </ul>
 
-
 <p class=MsoNormal style='margin-bottom:0in'>Middle author paper:</p>
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Xiao, J., Sharma, U., <b>Arab, A.</b>, ..., Goodarzi, H., Agarwal, S.,
+     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab<b>, Jiann Shiun Yuan, Hani Goodarzi,
+     Functional microRNA-Targeting Drug Discovery by Graph-Based Deep Learning,
+     <i>bioRxiv</i> (2023)
+     | doi: <a href="https://doi.org/10.1101/2023.01.13.524005">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.01.13.524005</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+ 
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+     Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab<b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.12.09.519805">
@@ -30,18 +39,17 @@
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Majd, H., ..., <b>Arab, A.</b>, Goodarzi, H., ..., Fattahi, F.,
+     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab<b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
      Deriving Schwann Cells from hPSCs Enables Disease Modeling and Drug Discovery for Diabetic Peripheral Neuropathy.
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.08.16.504209">
-     <span style='font-size:9.0pt;
-line-height:115%'>10.1101/2022.08.16.504209</span></a>
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Furuya, H., ..., <b>Arab, A.</b>, et al.,
+     Hideki Furuya, Yuka Sasaki, Runpu Chen, Rafael Peres, Kanani Hokutan, Kaoru Murakami, Nari Kim, Owen T. M. Chan, Ian Pagano, Lars Dyrskjøt, Jørgen B. Jensen, Per-Uno Malmstrom, Ulrika Segersten, Yijun Sun, <b>Abolfazl Arab<b>, Hani Goodarzi, Steve Goodison & Charles J. Rosser,
      PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity.<br>
      <i>Nature Scientific Report</i> (2022)
      | doi: <a href="https://doi.org/10.1038/s41598-022-16518-3">
@@ -51,18 +59,17 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Yogodzinski, C., <b>Arab, A</b>., et al.
+     Christopher Yogodzinski, <b>Abolfazl Arab<b>, Justin R. Pritchard, Hani Goodarzi & Luke A. Gilbert,
      A global cancer data integrator reveals principles of synthetic lethality, sex disparity and immunotherapy.
      <i>Genome Medicine</i> (2021)
      | doi: <a href="https://doi.org/10.1186/s13073-021-00987-8">
-     <span style='font-size:9.0pt;
-        line-height:115%'>10.1186/s13073-021-00987-8</span></a>
+     <span style='font-size:9.0pt;line-height:115%'>10.1186/s13073-021-00987-8</span></a>
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Zhu. X, ..., <b>Arab. A</b>, ..., et al.,&nbsp;
+     Xiphias Ge Zhu, Aleksey Chudnovskiy, Lou Baudrier, Benjamin Prizer, Yuyang Liu, Benjamin N. Ostendorf, Norihiro Yamaguchi, <b>Abolfozl Arab</b>, Bernardo Tavora, Rebecca Timson, Søren Heissel, Elisa de Stanchina, Henrik Molina, Gabriel D. Victora, Hani Goodarzi, Kıvanç Birsoy,
      Functional Genomics In Vivo Reveal Metabolic Dependencies of Pancreatic Cancer Cells,
      <i>Cell Metabolism</i> (2020)
      | doi: <a href="https://doi.org/10.1016/j.cmet.2020.10.017">
@@ -72,7 +79,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Tabibkhooei, A., Izadpanahi, M., <b>Arab, A.</b>, et al.
+     Alireza Tabibkhooei, Maryam Izadpanahi, <b>Abolfazl Arab</b>, Ali Zare-Mirzaei, Sara Minaeian, Ali Rostami, Alireza Mohsenian,
      Profiling of novel circulating microRNAs as a non-invasive biomarker in diagnosis and follow-up of high and low-grade gliomas,
      <i>Clinical Neurology and Neurosurgery</i> (2020)
      | doi: <a href="https://doi.org/10.1016/j.clineuro.2019.105652">
@@ -86,7 +93,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Arab, A.</b>, Goliaei, S. Mehrnejad, F.,
+     <b>Abolfazl Arab</b>, Sama Goliaei, Faramarz Mehrnejad,
      <a href="https://www.researchgate.net/publication/358973101_Demonstration_of_cellular_dynamic_behavior_in_response_to_DNA_damage_through_gene_regulatory_network_analysis_of_single-cell_resolution_DNA_repair_phenotype_and_gene_expression_multi-omics_dataset">
          <span style='font-size:9.0pt;line-height:115%'>
              Demonstration of cellular dynamic behavior in response to DNA damage through gene regulatory network analysis of
@@ -99,7 +106,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Arab, A.</b>, Arefian, E., et al.,
+     <b>Abolfazl Arab</b>, Fatemeh Gheidari, Fatemeh Arabi, Ehsan Arefian,
      <a href="https://www.researchgate.net/publication/326580962_Predicting_an_application_of_miR-190b_apoptotic_enhancement_effect_on_Glioblastoma_Multiform">
          <span style='font-size:9.0pt;line-height:115%'>
              Predicting an Application of miR-190b:
@@ -116,7 +123,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Arab, A.</b>,
+     <b>Abolfazl Arab</b>,
      <a href="https://www.researchgate.net/publication/343769939_Pursue_problem-solving_biology_what_I%27ve_learned_at_Harvard">
          <span style='font-size:9.0pt;line-height:115%'> Pursue problem-solving biology: What I’ve learned at Harvard</span></a>
      <span style='font-size:9.0pt;line-height:115%'>,</span>
@@ -125,7 +132,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Arab, A.</b>,
+     <b>Abolfazl Arab</b>,
      <a href="https://www.researchgate.net/publication/321349058_Interview_with_Dr_Mohsen_Khosravi_MDPhD_The_Inception_of_being_a_Researcher">
             <span style='font-size:9.0pt;line-height:115%width=250'> Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”</span></a>
      <span style='font-size:9.0pt;line-height:115%'>, </span>
@@ -134,7 +141,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Jadidi, M., <b>Arab, A.</b>,
+     Motahareh Jadidi, <b>Abolfazl Arab</b>,
      <a href="https://www.researchgate.net/publication/321350485_CRISPR_Gene_Therapy_System_a_Novel_Tools_to_Treat_Complex_Diseases_Persian">
          <span style='font-size:9.0pt;line-height:115%width=250'>CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases</span></a>
      <span style='font-size:9.0pt;line-height:115%'>, </span>
@@ -143,7 +150,7 @@ line-height:115%'>10.1101/2022.08.16.504209</span></a>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     <b>Arab, A.</b>,
+     <b>Abolfazl Arab</b>,
      <a href="https://www.researchgate.net/publication/321349000_Interview_with_Dr_Hani_Goodarzi_PhD_Nowadays_Scientists_Social_Status">
          <span style='font-size:9.0pt;line-height:115%width=250'>Interview with Dr. Hani Goodarzi Ph.D., “Nowadays Scientists Social Status”</span></a>
      <span style='font-size:9.0pt;line-height:115%'>, </span>
