--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -5,7 +5,7 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Alex Y. Ge*, <b>Abolfazl Arab<b>*, Raymond Dai, Albertas Navickas, Lisa Fish, Kristle Garcia, Hosseinali Asgharian, Hani Goodarzi, Luke A. Gilbert
+     Alex Y. Ge*, <b>Abolfazl Arab</b>*, Raymond Dai, Albertas Navickas, Lisa Fish, Kristle Garcia, Hosseinali Asgharian, Hani Goodarzi, Luke A. Gilbert
      A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.12.14.518457">
@@ -19,7 +19,7 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab<b>, Jiann Shiun Yuan, Hani Goodarzi,
+     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab</b>, Jiann Shiun Yuan, Hani Goodarzi,
      Functional microRNA-Targeting Drug Discovery by Graph-Based Deep Learning,
      <i>bioRxiv</i> (2023)
      | doi: <a href="https://doi.org/10.1101/2023.01.13.524005">
@@ -29,7 +29,7 @@
  </li>
  
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab<b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
+     Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab</b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.12.09.519805">
@@ -39,7 +39,7 @@
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab<b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
+     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
      Deriving Schwann Cells from hPSCs Enables Disease Modeling and Drug Discovery for Diabetic Peripheral Neuropathy.
      <i>bioRxiv</i> (2022)
      | doi: <a href="https://doi.org/10.1101/2022.08.16.504209">
@@ -49,7 +49,7 @@
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Hideki Furuya, Yuka Sasaki, Runpu Chen, Rafael Peres, Kanani Hokutan, Kaoru Murakami, Nari Kim, Owen T. M. Chan, Ian Pagano, Lars Dyrskjøt, Jørgen B. Jensen, Per-Uno Malmstrom, Ulrika Segersten, Yijun Sun, <b>Abolfazl Arab<b>, Hani Goodarzi, Steve Goodison & Charles J. Rosser,
+     Hideki Furuya, Yuka Sasaki, Runpu Chen, Rafael Peres, Kanani Hokutan, Kaoru Murakami, Nari Kim, Owen T. M. Chan, Ian Pagano, Lars Dyrskjøt, Jørgen B. Jensen, Per-Uno Malmstrom, Ulrika Segersten, Yijun Sun, <b>Abolfazl Arab</b>, Hani Goodarzi, Steve Goodison & Charles J. Rosser,
      PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity.<br>
      <i>Nature Scientific Report</i> (2022)
      | doi: <a href="https://doi.org/10.1038/s41598-022-16518-3">
@@ -59,7 +59,7 @@
  </li>
 
  <li style='font-size:9.0pt;line-height:115%width=300'>
-     Christopher Yogodzinski, <b>Abolfazl Arab<b>, Justin R. Pritchard, Hani Goodarzi & Luke A. Gilbert,
+     Christopher Yogodzinski, <b>Abolfazl Arab</b>, Justin R. Pritchard, Hani Goodarzi & Luke A. Gilbert,
      A global cancer data integrator reveals principles of synthetic lethality, sex disparity and immunotherapy.
      <i>Genome Medicine</i> (2021)
      | doi: <a href="https://doi.org/10.1186/s13073-021-00987-8">
