update a published preprint
https://doi.org/10.3390/cancers15061831

--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -31,8 +31,8 @@
  <li style='font-size:9.0pt;line-height:115%width=300'>
      Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab</b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
-     <i>bioRxiv</i> (2022)
-     | doi: <a href="https://doi.org/10.1101/2022.12.09.519805">
+     <i>Cancers</i> (2023)
+     | doi: <a href="https://doi.org/10.3390/cancers15061831">
      <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.12.09.519805</span></a>
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
