--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -33,7 +33,7 @@
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
      <i>Cancers</i> (2023)
      | doi: <a href="https://doi.org/10.3390/cancers15061831">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.12.09.519805</span></a>
+     <span style='font-size:9.0pt;line-height:115%'>10.3390/cancers15061831</span></a>
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
