add a paper and change orders

--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 
-<p class=MsoNormal style='margin-bottom:0in'>First author paper:</p>
+<p class=MsoNormal style='margin-bottom:0in'>First author:</p>
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
@@ -15,19 +15,9 @@
  </li>
 </ul>
 
-<p class=MsoNormal style='margin-bottom:0in'>Middle author paper:</p>
+<p class=MsoNormal style='margin-bottom:0in'>Middle author (published):</p>
 
 <ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab</b>, Jiann Shiun Yuan, Hani Goodarzi,
-     Functional microRNA-Targeting Drug Discovery by Graph-Based Deep Learning,
-     <i>bioRxiv</i> (2023)
-     | doi: <a href="https://doi.org/10.1101/2023.01.13.524005">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.01.13.524005</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
- 
  <li style='font-size:9.0pt;line-height:115%width=300'>
      Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab</b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
@@ -37,18 +27,7 @@
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
-
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
-     Deriving Schwann Cells from hPSCs Enables Disease Modeling and Drug Discovery for Diabetic Peripheral Neuropathy.
-     <i>bioRxiv</i> (2022)
-     | doi: <a href="https://doi.org/10.1101/2022.08.16.504209">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-
- <li style='font-size:9.0pt;line-height:115%width=300'>
+  <li style='font-size:9.0pt;line-height:115%width=300'>
      Hideki Furuya, Yuka Sasaki, Runpu Chen, Rafael Peres, Kanani Hokutan, Kaoru Murakami, Nari Kim, Owen T. M. Chan, Ian Pagano, Lars Dyrskjøt, Jørgen B. Jensen, Per-Uno Malmstrom, Ulrika Segersten, Yijun Sun, <b>Abolfazl Arab</b>, Hani Goodarzi, Steve Goodison & Charles J. Rosser,
      PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity.<br>
      <i>Nature Scientific Report</i> (2022)
@@ -84,6 +63,41 @@
      <i>Clinical Neurology and Neurosurgery</i> (2020)
      | doi: <a href="https://doi.org/10.1016/j.clineuro.2019.105652">
      <span style='font-size:9.0pt;line-height:115%'>10.1016/j.clineuro.2019.105652</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+
+</ul>
+
+<p class=MsoNormal style='margin-bottom:0in'>Middle author (preprint):</p>
+
+<ul>
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+     Mikayla N Richter, Sina Farahvashi, Ryan M Samuel, Homa Majd, Angeline K Chemel, Jonathan T Ramirez, Alireza Majd, Megan D Scantlen, Nicholas Elder, Andrius Cesiulis, Kristle Garcia, Tanvi Joshi, Matthew G Keefe, Bardia Samiakalantari, Elena M Turkalj, Johnny Yu, <b>Abolfazl Arab</b>, Keyi Yin, Bruce Culbertson, Bianca Vora, Chenling Xiong, Michael G Kattah, Roshanak Irannejad, Deanna L Kroetz, Tomasz J Nowakowski, Hani Goodarzi, Faranak Fattahi,
+     Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin chemotherapy toxicity,
+     <i>bioRxiv</i> (2023)
+     | doi: <a href="https://doi.org/10.1101/2023.03.08.531806">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.03.08.531806</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+     Arash Keshavarzi Arshadi, Milad Salem, Heather Karner, Kristle Garcia, <b>Abolfazl Arab</b>, Jiann Shiun Yuan, Hani Goodarzi,
+     Functional microRNA-Targeting Drug Discovery by Graph-Based Deep Learning,
+     <i>bioRxiv</i> (2023)
+     | doi: <a href="https://doi.org/10.1101/2023.01.13.524005">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.01.13.524005</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+ 
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
+     Deriving Schwann Cells from hPSCs Enables Disease Modeling and Drug Discovery for Diabetic Peripheral Neuropathy.
+     <i>bioRxiv</i> (2022)
+     | doi: <a href="https://doi.org/10.1101/2022.08.16.504209">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
      <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
