--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -15,7 +15,7 @@
  </li>
 </ul>
 
-<p class=MsoNormal style='margin-bottom:0in'>Middle author (published):</p>
+<p class=MsoNormal style='margin-bottom:0in'>Middle author (peer-review):</p>
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
