add Majd et al, Cell Stem Cell, 2023
https://doi.org/10.1016/j.stem.2023.04.006

--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -19,6 +19,14 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
+    Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Alireza Majd, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, Bradley Shibata, Abolfazl Arab, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
+    Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for diabetic peripheral neuropathy,
+    <i>Cell Stem Cell</i> (2023) | doi: <a href="https://doi.org/10.1016/j.stem.2023.04.006">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+ <li style='font-size:9.0pt;line-height:115%width=300'>
      Jerry Xiao, Utsav Sharma, <b>Abolfazl Arab</b>, Sohit Miglani, Sonakshi Bhalla, Shravanthy Suguru, Robert Suter, Reetu Mukherji, Marc E. Lippman, Paula R. Pohlmann, Jay Zeck, John L. Marshall, Benjamin A. Weinberg, Aiwu Ruth He, Marcus S. Noel, Richard Schlegel, Hani Goodarzi, Seema Agarwal,
      Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
      <i>Cancers</i> (2023)
@@ -92,15 +100,6 @@
      <span style='font-size:9.0pt;line-height:115%'></span>
  </li>
  
- <li style='font-size:9.0pt;line-height:115%width=300'>
-     Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
-     Deriving Schwann Cells from hPSCs Enables Disease Modeling and Drug Discovery for Diabetic Peripheral Neuropathy.
-     <i>bioRxiv</i> (2022)
-     | doi: <a href="https://doi.org/10.1101/2022.08.16.504209">
-     <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
-     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
-     <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
 </ul>
 
 <p class=MsoNormal style='margin-bottom:0in'>Conference paper:</p>
