--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -19,7 +19,7 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
-    Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Alireza Majd, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, Bradley Shibata, Abolfazl Arab, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
+    Homa Majd, Sadaf Amin, Zaniar Ghazizadeh, Andrius Cesiulis, Edgardo Arroyo, Karen Lankford, Alireza Majd, Sina Farahvashi, Angeline K. Chemel, Mesomachukwu Okoye, Megan D. Scantlen, Jason Tchieu, Elizabeth L. Calder, Valerie Le Rouzic, Bradley Shibata, <b>Abolfazl Arab</b>, Hani Goodarzi, Gavril Pasternak, Jeffery D. Kocsis, Shuibing Chen, Lorenz Studer, Faranak Fattahi,
     Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for diabetic peripheral neuropathy,
     <i>Cell Stem Cell</i> (2023) | doi: <a href="https://doi.org/10.1016/j.stem.2023.04.006">
      <span style='font-size:9.0pt;line-height:115%'>10.1101/2022.08.16.504209</span></a>
