--- a/content/about/mooc.html
+++ b/content/about/mooc.html
@@ -9,6 +9,12 @@
 
 <ul>
   <li style='font-size:9.0pt;line-height:115%'>
+      Evaluation of Undiagnosed and Rare Conditions – Offered by <b>Undiagnosed Diseases Network (UDN)</b>
+  </li>
+  <li style='font-size:9.0pt;line-height:115%'>
+      <b>Natural Language Processing</b> in TensorFlow – Offered by DeepLearning.AI at Coursera
+  </li>
+  <li style='font-size:9.0pt;line-height:115%'>
       <b>R Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
   </li>
   <li style='font-size:9.0pt;line-height:115%'>
