add a new paper
https://doi.org/10.1101/2023.09.18.558350

--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -81,6 +81,17 @@
 
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
+     
+     CC Hsiung, CM Wilson, NA Sambold, R Dai, Q Chen, S Misiukiewicz, A Arab, N Teyssier, T O’Loughlin, JC Cofsky, J Shi, LA Gilbert,
+     Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
+     <i>bioRxiv</i> (2023)
+     | doi: <a href="https://doi.org/10.1101/2023.09.18.558350">
+     <span style='font-size:9.0pt;line-height:115%'>10.1101/2023.09.18.558350</span></a>
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+ 
+ <li style='font-size:9.0pt;line-height:115%width=300'>
      Mikayla N Richter, Sina Farahvashi, Ryan M Samuel, Homa Majd, Angeline K Chemel, Jonathan T Ramirez, Alireza Majd, Megan D Scantlen, Nicholas Elder, Andrius Cesiulis, Kristle Garcia, Tanvi Joshi, Matthew G Keefe, Bardia Samiakalantari, Elena M Turkalj, Johnny Yu, <b>Abolfazl Arab</b>, Keyi Yin, Bruce Culbertson, Bianca Vora, Chenling Xiong, Michael G Kattah, Roshanak Irannejad, Deanna L Kroetz, Tomasz J Nowakowski, Hani Goodarzi, Faranak Fattahi,
      Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin chemotherapy toxicity,
      <i>bioRxiv</i> (2023)
