--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -82,7 +82,7 @@
 <ul>
  <li style='font-size:9.0pt;line-height:115%width=300'>
      
-     CC Hsiung, CM Wilson, NA Sambold, R Dai, Q Chen, S Misiukiewicz, A Arab, N Teyssier, T O’Loughlin, JC Cofsky, J Shi, LA Gilbert,
+     CC Hsiung, CM Wilson, NA Sambold, R Dai, Q Chen, S Misiukiewicz, <b>A Arab</b>, N Teyssier, T O’Loughlin, JC Cofsky, J Shi, LA Gilbert,
      Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
      <i>bioRxiv</i> (2023)
      | doi: <a href="https://doi.org/10.1101/2023.09.18.558350">
