--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -1,5 +1,15 @@
 <html lang="en">
 
+<p class=MsoNormal style='margin-bottom:0in'>Poster presentations:</p>
+
+<ul>
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+  <b>Abolfazl Arab</b>, Luke Gilbert,
+  A multiomics approach identifies genes potentially regulated through RNA m6A methylation and promote cellular sensitivity to DNA hypomethylation,
+  1st NYC RNA Symposium 2023
+  <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+</ul>
 
 <p class=MsoNormal style='margin-bottom:0in'>First author:</p>
 
