--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -1,16 +1,5 @@
 <html lang="en">
 
-<p class=MsoNormal style='margin-bottom:0in'>Poster presentations:</p>
-
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  <b>Abolfazl Arab</b>, Luke Gilbert,
-  A multiomics approach identifies genes potentially regulated through RNA m6A methylation and promote cellular sensitivity to DNA hypomethylation,
-  1st NYC RNA Symposium 2023
-  <span style='font-size:9.0pt;line-height:115%'></span>
- </li>
-</ul>
-
 <p class=MsoNormal style='margin-bottom:0in'>First author:</p>
 
 <ul>
@@ -126,6 +115,19 @@
 <p class=MsoNormal style='margin-bottom:0in'>Conference paper:</p>
 
 <ul>
+
+ <li style='font-size:9.0pt;line-height:115%width=300'>
+  <b>Abolfazl Arab</b>, Luke Gilbert,
+  <a href="https://www.researchgate.net/publication/374337981_A_multiomics_approach_identifies_genes_potentially_regulated_through_RNA_m6A_methylation_and_promote_cellular_sensitivity_to_DNA_hypomethylation">
+         <span style='font-size:9.0pt;line-height:115%'>
+             A multiomics approach identifies genes potentially regulated through RNA m6A methylation and promote cellular sensitivity to DNA hypomethylation</span></a>
+     <span style='font-size:9.0pt;line-height:115%'>,</span>
+     Poster Presentation, <i>1st NYC RNA Symposium 2023.</i>,
+     The Rockefeller University, NYC (2023)
+     <span class=MsoHyperlink><span style='font-size:9.0pt;line-height:115%;text-decoration:none;text-underline:none'> </span></span>
+     <span style='font-size:9.0pt;line-height:115%'></span>
+ </li>
+ 
  <li style='font-size:9.0pt;line-height:115%width=300'>
      <b>Abolfazl Arab</b>, Sama Goliaei, Faramarz Mehrnejad,
      <a href="https://www.researchgate.net/publication/358973101_Demonstration_of_cellular_dynamic_behavior_in_response_to_DNA_damage_through_gene_regulatory_network_analysis_of_single-cell_resolution_DNA_repair_phenotype_and_gene_expression_multi-omics_dataset">
