add senior RA and remove SIBMI from edu.

--- a/content/about/education.html
+++ b/content/about/education.html
@@ -2,22 +2,22 @@
 
 <table class=MsoNormalTable border=1 cellspacing=0.1 cellpadding=0 width=726 style='border-collapse:collapse;mso-table-layout-alt:fixed;border:none;mso-yfti-tbllook:1024;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:cell-none;mso-border-insidev:cell-none'>
 
-<!-- Harvard -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
-     <b>Department of Biomedical Informatics (DBMI),<br>Harvard Medical School (HMS)</b><br>
-    </span><span style='font-size:9.0pt;line-height:115%width=300'>
-    Summer Institute in Biomedical Informatics (SIBMI)
-    </span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Boston, MA, USA<br><i>June 2019 – Aug 2019</i>
-    </span></p>
-  </td>
- </tr>
+<!--&lt;!&ndash; Harvard &ndash;&gt;-->
+<!-- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>-->
+<!--  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>-->
+<!--    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>-->
+<!--     <b>Department of Biomedical Informatics (DBMI),<br>Harvard Medical School (HMS)</b><br>-->
+<!--    </span><span style='font-size:9.0pt;line-height:115%width=300'>-->
+<!--    Summer Institute in Biomedical Informatics (SIBMI)-->
+<!--    </span></p>-->
+<!--  </td>-->
+<!--  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>-->
+<!--   <p class=MsoNormal style='margin-bottom:0in'>-->
+<!--    <span style='font-size:9.0pt;line-height:115%width=300'>-->
+<!--     Boston, MA, USA<br><i>June 2019 – Aug 2019</i>-->
+<!--    </span></p>-->
+<!--  </td>-->
+<!-- </tr>-->
 
 <!-- UT M.Sc. -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
