--- a/content/about/research.html
+++ b/content/about/research.html
@@ -4,6 +4,7 @@
 <table class=MsoNormalTable border=1 cellspacing=0.1 cellpadding=0 width=726
  style='border-collapse:collapse;mso-table-layout-alt:fixed;border:none;mso-yfti-tbllook:1024;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:
  cell-none;mso-border-insidev:cell-none'>
+ <!-- Arc -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
     <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
@@ -18,6 +19,7 @@
      Palo Alto, USA<br><i>July 2022 – current </i></span></p>
   </td>
  </tr>
+ <!-- Harvard -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
@@ -33,16 +35,17 @@
      Boston, USA<br><i>July 2019 – current</i></span></p>
   </td>
  </tr>
+ <!-- UCSF -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
     <b>University of California San Francisco (UCSF)<br></b>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Role (Job title): Scientific Research Assistant II<br>
-     Sep 2021 to July 2022<i> </i>–
-   Supervisor: Dr. Luke Gilbert<br>
-   Role (Job title): Junior Specialist II<br>Sep 2019 to July 2020 – <span
-  style='mso-bidi-font-weight:bold'>Supervisor</span>: Dr. Hani Goodarzi</span></p>
+     <span style='font-size:9.0pt;line-height:115%width=300'>
+      Role (Job title): Scientific Research Assistant II<br>
+      Sep 2021 to July 2022 – Supervisor: Dr. Luke Gilbert<br>
+      Role (Job title): Junior Specialist II<br>
+      Sep 2019 to July 2020 – Supervisor: Dr. Hani Goodarzi</span>
+   </p>
   </td>
   <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
    <p class=MsoNormal style='margin-bottom:0in'>
@@ -50,6 +53,7 @@
      San Francisco, USA<br><i>Sep 2019 – July 2022</i></span></p>
   </td>
  </tr>
+ <!-- Broad -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'><p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
    <b style='mso-bidi-font-weight:normal'>
@@ -65,6 +69,7 @@
      Boston, USA<br><i>Aug 2018 – Oct 2018</i></span></p>
   </td>
  </tr>
+ <!-- Arefian Lab -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
