--- a/content/about/research.html
+++ b/content/about/research.html
@@ -8,10 +8,12 @@
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
   <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
     <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
-     <b>Arc Institute</b><br>
+     <b>Gilbert Lab and Multi-Omics Tech Center | Arc Institute</b><br>
     </span><span style='font-size:9.0pt;line-height:115%width=300'>
+      Role (Job title): Senior Research Associate<br>
+      Nov 2023 to current – Supervisor: Dr. Nianzhen Li<br>
       Role (Job title): Research Associate II<br>
-      Supervisor: Dr. Luke Gilbert</span></p>
+      Jul 2022 to current – Supervisor: Dr. Luke Gilbert</span></p>
   </td>
   <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
    <p class=MsoNormal style='margin-bottom:0in'>
