--- a/content/about/research.html
+++ b/content/about/research.html
@@ -6,10 +6,10 @@
  cell-none;mso-border-insidev:cell-none'>
  <!-- Arc -->
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
-     <b>Gilbert Lab and Multi-Omics Tech Center | Arc Institute</b><br>
-    </span><span style='font-size:9.0pt;line-height:115%width=300'>
+  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
+   <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
+    <b>Gilbert Lab and Multi-Omics Tech Center | Arc Institute</b><br>
+    <span style='font-size:9.0pt;line-height:115%width=300'>
       Role (Job title): Senior Research Associate<br>
       Nov 2023 to current – Supervisor: Dr. Nianzhen Li<br>
       Role (Job title): Research Associate II<br>
@@ -26,10 +26,10 @@
   <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
     <b>Undiagnosed Diseases Network (UDN)</b> &<br><b>DBMI Harvard Medical School</b><br>
-   <span style='font-size:9.0pt;line-height:115%width=300'>
-    Role: Summer intern; Volunteer researcher<br>
-    Topic: <i>“Investigating biological similarities among rare disease patients”</i><br>
-    Mentor: Dr. Hadi Amiri | Supervisors: Dr. Marinka Zitnik, Dr. Isaac S. Kohane</span></p>
+    <span style='font-size:9.0pt;line-height:115%width=300'>
+     Role: Summer intern; Volunteer researcher<br>
+     Topic: <i>“Investigating biological similarities among rare disease patients”</i><br>
+     Mentor: Dr. Hadi Amiri | Supervisors: Dr. Marinka Zitnik, Dr. Isaac S. Kohane</span></p>
   </td>
   <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
    <p class=MsoNormal style='margin-bottom:0in'>
