--- a/content/about/education.html
+++ b/content/about/education.html
@@ -1,61 +1,48 @@
 <html lang="en">
 
-<table class=MsoNormalTable border=1 cellspacing=0.1 cellpadding=0 width=726 style='border-collapse:collapse;mso-table-layout-alt:fixed;border:none;mso-yfti-tbllook:1024;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:cell-none;mso-border-insidev:cell-none'>
-
-<!--&lt;!&ndash; Harvard &ndash;&gt;-->
-<!-- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>-->
-<!--  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>-->
-<!--    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>-->
-<!--     <b>Department of Biomedical Informatics (DBMI),<br>Harvard Medical School (HMS)</b><br>-->
-<!--    </span><span style='font-size:9.0pt;line-height:115%width=300'>-->
-<!--    Summer Institute in Biomedical Informatics (SIBMI)-->
-<!--    </span></p>-->
-<!--  </td>-->
-<!--  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>-->
-<!--   <p class=MsoNormal style='margin-bottom:0in'>-->
-<!--    <span style='font-size:9.0pt;line-height:115%width=300'>-->
-<!--     Boston, MA, USA<br><i>June 2019 – Aug 2019</i>-->
-<!--    </span></p>-->
-<!--  </td>-->
-<!-- </tr>-->
-
-<!-- UT M.Sc. -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
-     <b>Department of Life Science Engineering,<br>University of Tehran<br></b>
-    </span><span style='font-size:9.0pt;line-height:115%width=300'>
-     <i>M.Sc. Nano-biomimetics</i>
-     <!--Thesis title:
-     “Gene regulatory network analysis of single cell expression and DNA repair phenotype datasets”-->
-    </span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Tehran, Iran<br><i>Sep 2018 – Sep 2021</i>
-    </span></p>
-  </td>
- </tr>
-
-<!-- UT B.Sc. -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=985 valign=top style='width:739.1pt;border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-    <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:0in;margin-left:0in'><span>
-     <b>School of Biology, College of Science,<br>University of Tehran<br></b>
-    </span><span style='font-size:9.0pt;line-height:115%width=300'>
-     <i>B.Sc. Cellular & Molecular Biology</i>
-    </span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Tehran, Iran<br><i>Sep 2013 – July 2018</i>
-     <!-- Thesis title:“Assess how microRNA target genes are related using ontological bio-terms”-->
-    </span></p>
-  </td>
- </tr>
-
+<table class="MsoNormalTable" border="1" cellspacing="0" cellpadding="0" width="715" style="margin-left:.75pt; border-collapse:collapse; border:none">
+  <tr style="height:15.75pt">
+    <td width="148" valign="top" style="width:111.3pt; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
+      <p class="MsoNormal" style="margin-bottom:0in"><span style="color:black">
+          Tehran, Iran</span><i><span style="color:black"><br>
+      </span></i><i><span style="font-size:9.0pt; line-height:115%; color:black">
+          Sep 2018 - Sep 2021</span></i>
+      </p>
+    </td>
+    <td width="566" valign="top" style="width:5.9in; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
+      <p class="MsoNormal" style="margin-bottom:0in">
+          <b><span style="color:black">
+              Department of Life Science Engineering, University of Tehran<br></span></b>
+          <i><span style="color:black">
+              M.Sc. Nano-biomimetics
+          </span></i>
+          <span style="font-size:9.0pt; line-height:115%; color:black"><br>
+              Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype datasets</i>"
+          </span>
+      </p>
+    </td>
+  </tr>
+  <tr style="height:15.75pt">
+    <td width="148" valign="top" style="width:111.3pt; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
+      <p class="MsoNormal" style="margin-bottom:0in">
+          <span style="color:black">
+              Tehran, Iran</span><i><span style="color:black"> <br></span></i>
+          <i><span style="font-size:9.0pt; line-height:115%; color:black">
+              Sep 2013 - July 2018
+          </span></i>
+      </p>
+    </td>
+    <td width="566" valign="top" style="width:5.9in; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
+      <p class="MsoNormal" style="margin-bottom:0in"><b>
+          <span style="color:black">School of Biology, College of Science, University of Tehran</span></b>
+          <i><span style="color:black"><br>
+              B.Sc. Cellular &amp; Molecular Biology</span></i>
+          <span style="font-size:9.0pt; line-height:115%; color:black"><br>
+              Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
+          </span>
+      </p>
+    </td>
+  </tr>
 </table>
 
 </html>
